# cosmo_playground

./: README.md  pyproject.toml
notebooks/: 00_basic_cosmology.ipynb  01_shear_cl_component.ipynb  02_gammat_cl_component.ipynb  03_gg_cl_component.ipynb
